Fixed 'add player' button on mobile

--- a/style.css
+++ b/style.css
@@ -201,7 +201,8 @@ button{
 
 #submitButton{
     width:15%;
-    margin: 0 0 0 85%;
+    margin: 0 0 0 80%;
+    min-width: fit-content;
 }
 
 #displayPlayers{
